# data-conversion-toolkit

./: .gitignore  Doxyfile  README.md  ROOTINSTALL.md
toolkit/: CMakeLists.txt  Cl2Mf-converter.cpp  Lu2Mf-converter.cpp  Mf-filter.cpp  Mf-updater.cpp  Mo2Mf-converter.cpp  Px2Mf-converter.cpp
toolkit-build/: .gitignore  buildandmake.py  get-run-id.py
toolkit-build/Modules/: CMakeMacroParseArguments.cmake  FindCURL.cmake
toolkit-python/: .gitignore  Cl2Mf-validation.py  Frame.C  Plots.py  datastructs.py  frame-viewer.py  make-mask.py  map-maker.py  mfvalidator.py  rate-plotter.py  setup.sh  source_check.py
toolkit/include/: .gitignore  AddMetadata.h  BlobFinder.h  CalibMetadata.h  Cl2MfConverter.h  Frames.h  FramesConsts.h  LinkDef.h  ListHandler.h  MfFilter.h  MfUpdater.h  Mo2MfConverter.h  MoEDALMetadata.h  Utils.h  WriteToNtuple.h
toolkit/src/: .gitignore  AddMetadata.cc  BlobFinder.cc  CalibMetadata.cc  Cl2MfConverter.cc  Frames.cc  ListHandler.cc  MfFilter.cc  MfUpdater.cc  Mo2MfConverter.cc  MoEDALMetadata.cc  Utils.cc  WriteToNtuple.cc
